# WEB_HW_08_all

HW_08/: pyproject.toml  requirements.txt
HW_08/MongoDB/: app.py  main.py  pyproject.toml
HW_08/RabbitMQ/: config.ini  connect.py  consumer.py  model.py  producer.py
