[tool.poetry]
name = "hw-web"
version = "0.1.0"
description = ""
authors = ["GhosteLLoS <123022357+GhosteLLoS@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_web"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
